gitops/mediarr/qbittorrent.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
      - name: qbittorrent
        image: lscr.io/linuxserver/qbittorrent:latest
        resources:
          requests:
            cpu: 10m
            memory: 128Mi
          # limits:
          #   memory: "128Mi"
        ports:
        - containerPort: 8080
          name: http
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
        securityContext:
          readOnlyRootFilesystem: false
          runAsNonRoot: false
          allowPrivilegeEscalation: false
          capabilities:
            add:
            - CHOWN
            - SETGID
            - SETUID
            # - FOWNER
            # - DAC_OVERRIDE
            # - AUDIT_WRITE
            # - FSETID
            # - KILL
            # - MKNOD
            # - NET_BIND_SERVICE
            # - SETFCAP
            # - SETPCAP
            # - SYS_CHROOT
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - name: config
          mountPath: "/config/qBittorrent.conf"
          subPath: qbittorrent.conf
        - name: media
          mountPath: "/media/nas"
      volumes:
      # - name: config
      #   persistentVolumeClaim:
      #     claimName: mediarr-config
      # - name: media
      #   persistentVolumeClaim:
      #     claimName: mediarr-media
      - name: config
        configMap:
          name: config-files
      - name: media
        emptyDir: {}


---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  selector:
    app: qbittorrent
  ports:
  - name: http
    port: 8080
    targetPort: http
