gitops/mediarr/radarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: lscr.io/linuxserver/radarr:latest
        resources:
          requests:
            cpu: 10m
            memory: 128Mi
          # limits:
          #   memory: "128Mi"
        ports:
        - containerPort: 7878
          name: http
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
        securityContext:
          readOnlyRootFilesystem: false
          runAsNonRoot: false
          allowPrivilegeEscalation: false
          capabilities:
            add:
            - CHOWN
            - SETGID
            - SETUID
            # - FOWNER
            # - DAC_OVERRIDE
            # - AUDIT_WRITE
            # - FSETID
            # - KILL
            # - MKNOD
            # - NET_BIND_SERVICE
            # - SETFCAP
            # - SETPCAP
            # - SYS_CHROOT
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - name: config
          mountPath: "/config"
          subPath: radarr
        - name: media
          mountPath: "/media/nas"
      - name: radarr-exporter
        image: ghcr.io/onedr0p/exportarr:v2.0
        imagePullPolicy: IfNotPresent
        args:
          - radarr
        ports:
          - name: metrics
            containerPort: 9707
        livenessProbe:
          httpGet:
            path: /healthz
            port: metrics
          failureThreshold: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthz
            port: metrics
          failureThreshold: 5
          periodSeconds: 10
        resources:
          requests:
            cpu: 1m
            memory: 64Mi
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: mediarr-config
      - name: media
        persistentVolumeClaim:
          claimName: mediarr-media

---
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  selector:
    app: radarr
  ports:
  - name: http
    port: 7878
    targetPort: http
  - name: metrics
    port: 9707
    targetPort: metrics
